[package]
authors = ["danite <luansnain@gmail.com>"]
edition = "2018"
name = "nain"
version = "0.1.0"

[lib]
crate-type = ["lib"]

[workspace]
members = ["sandbox", "crates/*"]

[dependencies]
glad-gl = {path = "./vendor/glad-gl"}
glfw = "0.43.0"
nain_events = {path = "crates/nain_events"}
nain_log = {path = "crates/nain_log"}
nain_window = {path = "crates/nain_window"}
